[gd_scene load_steps=6 format=2]

[ext_resource path="res://Were you blinded by its majesty.jpg" type="Texture" id=1]
[ext_resource path="res://Start Game.gd" type="Script" id=2]
[ext_resource path="res://Halo v2.png" type="Texture" id=3]
[ext_resource path="res://Quit.gd" type="Script" id=4]
[ext_resource path="res://Options.gd" type="Script" id=5]

[node name="Main menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Were you blinded by its majesty" type="Sprite" parent="."]
position = Vector2( 635.23, 365.468 )
scale = Vector2( 0.668135, 0.676461 )
texture = ExtResource( 1 )

[node name="Layout" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="HBoxContainer" parent="Layout"]
margin_right = 1280.0
margin_bottom = 45.0
size_flags_horizontal = 3
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Layout/Title"]
margin_left = 316.0
margin_right = 963.0
margin_bottom = 45.0
texture = ExtResource( 3 )

[node name="Main" type="HBoxContainer" parent="Layout"]
margin_top = 49.0
margin_right = 1280.0
margin_bottom = 702.0
size_flags_vertical = 3
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Layout/Main"]
margin_right = 1280.0
margin_bottom = 653.0
size_flags_horizontal = 3
alignment = 1

[node name="Start Game" type="Button" parent="Layout/Main/VBoxContainer"]
margin_top = 292.0
margin_right = 1280.0
margin_bottom = 312.0
text = "Start Game"
script = ExtResource( 2 )

[node name="Quit" type="Button" parent="Layout/Main/VBoxContainer"]
margin_top = 316.0
margin_right = 1280.0
margin_bottom = 336.0
text = "Quit"
script = ExtResource( 4 )

[node name="Options" type="Button" parent="Layout/Main/VBoxContainer"]
margin_top = 340.0
margin_right = 1280.0
margin_bottom = 360.0
text = "Options"
script = ExtResource( 5 )

[node name="Credits" type="HBoxContainer" parent="Layout"]
margin_top = 706.0
margin_right = 1280.0
margin_bottom = 720.0
alignment = 1

[node name="Label" type="Label" parent="Layout/Credits"]
margin_left = 558.0
margin_right = 722.0
margin_bottom = 14.0
text = "Copyright Cyclonicfish686"
[connection signal="pressed" from="Layout/Main/VBoxContainer/Start Game" to="Layout/Main/VBoxContainer/Start Game" method="_on_Start_Game_pressed"]
[connection signal="pressed" from="Layout/Main/VBoxContainer/Quit" to="Layout/Main/VBoxContainer/Start Game" method="_on_Quit_pressed"]
[connection signal="pressed" from="Layout/Main/VBoxContainer/Options" to="Layout/Main/VBoxContainer/Start Game" method="_on_Options_pressed"]
